--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,9 @@ lsi: false
 defaults:
   - values:
       layout: default
+markdown: redcarpet
+exclude:
+  - README.md
+  - CNAME
+  - Gemfile
+  - Gemfile.lock
